# point-cloud-viewer

./: .gitignore  LICENSE  PointCloudViewer.sln  README.md
PointCloudViewer.Client/: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
PointCloudViewer.Client/src/: App.vue  main.ts  router.ts
PointCloudViewer.Client/src/assets/wasm/: .gitignore
PointCloudViewer.Client/src/components/: NavBar.vue  TheLogin.vue  TheWelcome.vue  UserLogin.vue  UserRegistration.vue
PointCloudViewer.Client/src/stores/: auth.ts
PointCloudViewer.Native/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
PointCloudViewer.Native/cmake/: TargetProperties.cmake
PointCloudViewer.Native/src/: CMakeLists.txt  main.cpp
PointCloudViewer.Server/: ApplicationDbContext.cs  Dockerfile  PointCloudViewer.Server.csproj  PointCloudViewer.Server.http  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
PointCloudViewer.Server/Controllers/: AuthController.cs  WeatherForecastController.cs
PointCloudViewer.Server/DTOs/: RegisterNewUserRequestDTO.cs  UserLoginRequestDTO.cs
PointCloudViewer.Server/Properties/: launchSettings.json
PointCloudViewer.Server/Services/: TokenService.cs
PointCloudViewer.Server/Services/Interfaces/: ITokenService.cs
PointCloudViewer.ServerTests/: PointCloudViewer.ServerTests.csproj  TestsWebApplicationFactory.cs
PointCloudViewer.ServerTests/IntegrationTests/: AuthTests.cs
